public/css/base.css
/* ... */
.swap-bottom-pad-mod{
  padding-bottom: 50px;
}
.need-help-para{
  color: var(--Text-Secondary, #9AA0A6);

  /* Link Base */
  font-family: "Helvetica Neue";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 22px;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-decoration-skip-ink: none;
  text-decoration-thickness: auto;
  text-underline-offset: auto;
  text-underline-position: from-font;
}
.tx-pendng-color-blend{
 background: #222220;
  display: block;
  margin: -50px auto;
  position: relative;
  top: -50px;
}
.pending-tx-long-para{
  color: var(--Text-Secondary, #9AA0A6);
  text-align: left;
  width: 90%;
  margin: auto 34px;
  /* Body Small */
  font-family: "Helvetica Neue";
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px; /* 142.857% */
}
.swap-div-height-mod{
 position: relative;
 top: -60px; 
}
.sell-div-height-mod{
 position: relative;
 top: -120px; 
}

.swap-parent-div1{
  width: 90%;
  height: auto;
  margin-top: -10px;
}

.dash-parent-div{
  width: 90%;
  height: 120px;
}
.dash-parent-div1{
  width: 90%;
  height: 220px;
}
.dash-parent-div2{
  width: 90%;
  height: 200px;
}
.dash-parent-div3{
  width: 100%;
    height: 220px;
}
.dash-parent-div4{
  width: 90%;
  height: 200px;
}
.dash-parent-div5{
  width: 90%;
  height: 90px;
}
.hori{
  width: 90%;
  color: var(--Text-Secondary, #9AA0A6);
  opacity: 0.25;
   font-weight: 400;
}
.vl{
  background: var(--Grey-200, #9AA0A6);
  height: auto;
  width: 1px;
}
.double-flex-div{
  display: flex; 
  justify-content: space-between;
}
.wel-xchain-para0{
  color: var(--Text-Secondary, #9AA0A6);
  /* Body Base */
  font-family: "Helvetica Neue";
  font-size: 16px;
  font-style: normal;
  text-align: left;
  font-weight: 400; /* 137.5% */
}
.wel-xchain-para1{
  text-align: left;
  color: var(--Text-Primary, var(--White, #FFF));

  /* Digital Large */
  font-family: "Roboto Mono";
  font-size: 48px;
  font-style: normal;
  font-weight: 400;
   position: relative;
    top: -50px;
}
.rewards-para{
  color: var(--Text-Primary, var(--White, #FFF));
  text-align: left;
  /* Body Strong */
  font-family: "Helvetica Neue";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
}
.rewards-val-para{
  color: var(--Text-Primary, var(--White, #FFF));
  text-align: left;
  position: relative;
  top:-27px;
  /* Digital Medium */
  font-family: "Roboto Mono";
  font-size: 40px;
  font-style: normal;
  font-weight: 400;
}
.nodes-flex-div{
  display: flex;
  justify-content: space-between;
}
.dash-parent-flex-div{
  display: flex;
  justify-content: space-between;
  width: 100%;
}
.div3-mod{
  margin: auto 30px;
}
.rewards-right-img{
  width: 24px;
  height: 24px;
  position: relative;
  top: 15px;
}
.pending-rewards-div{
display: flex;
flex-direction: row;
align-items: center;
gap: 10px;
 margin-bottom: 1000px;
}  
.pending-rewards-para{
color: var(--Text-Secondary, #9AA0A6);
position: relative;
top:-10px;
/* Body Small */
font-family: "Helvetica Neue";
font-size: 14px;
font-style: normal;
font-weight: 400;
/* 142.857% */
}
.claim-para  {
color: var(--Interactive-Primary, var(--White, #FFF));
position: relative;
right: 0px;
top: -10px;

/* Link Small */
font-family: "Helvetica Neue";
font-size: 14px;
font-style: normal;
font-weight: 500; /* 142.857% */
text-decoration-line: underline;
text-decoration-style: solid;
text-decoration-skip-ink: none;
text-decoration-thickness: auto;
text-underline-offset: auto;
text-underline-position: from-font;
}

.hamburger-plane.active{
  font-weight:bold;
  text-align:center;
  margin: 0px auto;
  position: fixed;
  right: 80px;
  left :0px;
  top : 0;
  bottom: 0;
  margin:auto;
  background-color: rgba(14, 16, 19, 0.99);
  display: flex;
}
.hamburger-plane{
  font-weight:bold;
  text-align:center;
  margin: 0px auto;
  position: fixed;
  right: 5500px;
  left :0px;
  top : 0;
  bottom: 0;
  margin:auto;
  background-color: rgba(43,43,43, 1);
  display: flex;
  transition: 1.2s;
  z-index: 2;
}
.xm-ul-menu.active{
  display: block;
  list-style: none;
  line-height: 40px;
  font-weight: 10; 
  font-size: 20px;
  position: relative;
  left:0;
}
.xm-ul-menu{
  display: block;
  list-style: none;
  line-height: 40px;
  position: relative;
  left: 1500px;
  font-weight: 10; 
  font-size: 20px;
  transition: 1.2s;
}
.xm-ul-menu h2{
   color: var(--Text-Primary, var(--White, #FFF));
}
.help-desk-img{
  width: 24px;
  height: 24 px;
   text-align:center;
    bottom: 20px;
    right: 20px;
    position: fixed;
    margin:auto;
    display: flex;
    z-index:2;
}
.footer{
  background-color: rgb(14, 16, 19, 0.99);
   box-shadow: 0px 2px 0px rgba(0,0,0, 1);
  filter:blur(8px);
  -webkit-filter:blur(8px);
  text-align:center;
  height: 110px;
  bottom: -10px;
  width: 100%;
  position: fixed;
  margin:auto;
  display: flex;
  z-index:2;
}
.header-background{
  background-color: rgb(14, 16, 19, 1);
   box-shadow: 0px px 0px rgb(255, 255, 255);
    filter:blur(8px);
    -webkit-filter:blur(8px);
  text-align:center;
  height: 70px;
  top: -10px;
  width: 100%;
  position: absolute;
  margin:auto;
  display: flex;
}
.hamburger{
  margin: auto 10px;
  transition: 0.5s;
  z-index: 1000;
}
.Header-bar{
  display: block;
  position: absolute;
  left:15px;
  top:20px;
  bottom: 10px;
  transition: 1.2s;
  z-index:2;
}

.union{
  width: 30%;
  height: 30%;
  margin: 10px auto;
  position: relative;
  top: -35px;

}
.xm-para{
  text-align: center;
  color: var(--Text-Primary, var(--White, #FFF));
  text-align: center;

  /* Digital Large */
  font-family: "Roboto Mono";
  font-size: 48px;
  font-style: normal;
  font-weight: 400;
}
.sig-para{
  font-weight:10;
  position: relative;
  top:-40px;
  color: var(--Text-Secondary, #9AA0A6);
  text-align: center;

  /* Body Small */
  font-family: "Helvetica Neue";
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px; /* 142.857% */
}
/* ... */

